--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "@nextui-org/modal": "^2.0.39",
+    "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.9",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-slick": "^0.30.2",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
