--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@nextui-org/modal": "^2.0.39",
     "@nextui-org/react": "^2.4.6",
+    "axios": "^1.7.5",
     "framer-motion": "^11.3.9",
     "next": "14.2.5",
     "react": "^18.3.1",
